--- a/templates/dashboard/ambientes.html
+++ b/templates/dashboard/ambientes.html
@@ -21,7 +21,7 @@
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-bs-parent="#miAccordion">
         <div class="card-body">
             <div class="table-responsive mt-3">
-                <table id="tabla-ambiente" class="table table-striped tabla-ambientes" style="width:100%">
+                <table id="tabla-ambiente" class="table table-striped tabla-ambientes tabla-comun" style="width:100%">
                     <thead>
                         <tr>
                             <th style="text-align: center;">Nombre</th>
