--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -16,7 +16,7 @@
         </div>
         <div class="card-body">
             <div class="table-responsive">
-                <table id="tabla-curso" class="table table-striped tabla-cursos" style="width:100%">
+                <table id="tabla-curso" class="table table-striped tabla-cursos tabla-comun" style="width:100%">
                     <thead>
                         <tr>
                             <th style=" text-align:center;">Nombre Curso</th>
