--- a/templates/dashboard/disponibilidad.html
+++ b/templates/dashboard/disponibilidad.html
@@ -21,7 +21,7 @@
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-bs-parent="#miAccordion">
         <div class="card-body">
             <div class="table-responsive mt-3">
-                <table id="tabla-disponibilidad" class="table table-striped" style="width:100%">
+                <table id="tabla-disponibilidad" class="table table-striped tabla-disponibilidad tabla-comun" style="width:100%">
                     <thead>
                         <tr>
                             <th style="width: 30%; text-align: center;">Docente</th>
