--- a/templates/dashboard/grupos.html
+++ b/templates/dashboard/grupos.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="card-body show">
-                <table id="tabla-grupo" class="table table-striped tabla-cursos" style="width:100%">
+                <table id="tabla-grupo" class="table table-striped tabla-cursos tabla-comun" style="width:100%">
                     <thead>
                         <tr>
                             <th style="text-align: center">Nombre</th>
