--- a/templates/dashboard/docentes.html
+++ b/templates/dashboard/docentes.html
@@ -16,7 +16,7 @@
         </div>
         <div class="card-body">
             <div class="table-responsive">
-                <table id="tabla-docente" class="table table-striped tabla-docentes" style="width:100%">
+                <table id="tabla-docente" class="table table-striped tabla-docentes tabla-comun" style="width:100%">
                     <thead>
                         <tr>
                             <th style="text-align:center">Nombres</th>
