--- a/templates/dashboard/ambientesxcurso.html
+++ b/templates/dashboard/ambientesxcurso.html
@@ -291,8 +291,8 @@ $(document).ready(function () {
                     data: null,
                     render: function (data, type, row) {
                         return `
-                            <button class="btn btn-warning btn-sm btnAsignar" data-id="${row.idcurso}" data-curso="${row.curso}" title="Asignar"><i class="fas fa-pencil-alt"></i></button>
-                            <button class="btn btn-danger btn-sm btnEliminar" data-id="${row.idcurso}" data-nombre="${row.curso}" title="Eliminar"><i class="fas fa-times"></i></button>
+                            <button class="btn btn-warning btn-sm btnAsignar" data-id="${row.idcurso}" data-curso="${row.cursos}" title="Asignar"><i class="fas fa-pencil-alt"></i></button>
+                            <button class="btn btn-danger btn-sm btnEliminar" data-id="${row.idcurso}" data-nombre="${row.cursos}" title="Eliminar"><i class="fas fa-times"></i></button>
                         `;
                     },
                     className: "text-center",
